--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,39 +1,36 @@
-pipeline{
+node {
+    def app
 
-	agent any
+    stage('Clone repository') {
+        /* Let's make sure we have the repository cloned to our workspace */
 
-	environment {
-		DOCKERHUB_CREDENTIALS=credentials('docker_crede')
-	}
+        checkout scm
+    }
 
-	stages {
+    stage('Build image') {
+        /* This builds the actual image; synonymous to
+         * docker build on the command line */
 
-		stage('Build') {
+        app = docker.build("madhavikdm/docker_demo")
+    }
 
-			steps {
-				sh 'docker build -t madhavikdm/nodeapp:latest .'
-			}
-		}
+    stage('Test image') {
+        /* Ideally, we would run a test framework against our image.
+         * For this example, we're using a Volkswagen-type approach ;-) */
 
-		stage('Login') {
+        app.inside {
+            sh 'echo "Tests passed"'
+        }
+    }
 
-			steps {
-				sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
-			}
-		}
-
-		stage('Push') {
-
-			steps {
-				sh 'docker push madhavikdm/nodeapp:latest'
-			}
-		}
-	}
-
-	post {
-		always {
-			sh 'docker logout'
-		}
-	}
-
+    stage('Push image') {
+        /* Finally, we'll push the image with two tags:
+         * First, the incremental build number from Jenkins
+         * Second, the 'latest' tag.
+         * Pushing multiple tags is cheap, as all the layers are reused. */
+        docker.withRegistry('https://hub.docker.com/repository/docker/madhavikdm/myrepo-agora', 'madhavikdm') {
+            app.push("${env.BUILD_NUMBER}")
+            app.push("latest")
+        }
+    }
 }
