--- a/jenkinsFile
+++ b/jenkinsFile
@@ -34,3 +34,50 @@ node {
         }
     }
 }
+pipeline {
+  environment {
+    registry = "madhavikdm/myrepo-agora"
+    registryCredential = 'docker_crede'
+    dockerImage = ''
+  }
+  agent any
+  stages {
+    stage('Cloning Git') {
+      steps {
+        git 'https://github.com/madhavikdm/docker_demo.git'
+      }
+    }
+    stage('Building image') {
+      steps{
+        script {
+          dockerImage = docker.build registry + ":$BUILD_NUMBER"
+        }
+      }
+    }
+
+    stage('Test Mkdocs' ) {
+                agent {
+                docker { image 'madhavikdm/myrepo-agora:$BUILD_NUMBER' }
+            }
+            steps {
+                sh 'mkdocs --version'
+            }
+        }
+
+
+    stage('Deploy Image') {
+      steps{
+        script {
+          docker.withRegistry( '', registryCredential ) {
+            dockerImage.push()
+          }
+        }
+      }
+    }
+    stage('Remove Unused docker image') {
+      steps{
+        sh "docker rmi $registry:$BUILD_NUMBER"
+      }
+    }
+  }
+}
