--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,47 +1,33 @@
-pipeline {
-  environment {
-    registry = "madhavikdm/myrepo-agora"
-    registryCredential = 'docker_crede'
-    dockerImage = ''
-  }
-  agent any
-  stages {
-    stage('Cloning Git') {
-      steps {
-        git 'https://github.com/madhavikdm/docker_demo.git'
-      }
-    }
-    stage('Building image') {
-      steps{
-        script {
-          dockerImage = docker.build registry + ":$BUILD_NUMBER"
-        }
-      }
+node {
+    def app
+
+    stage('Clone repository') {
+        /* Cloning the Repository to our Workspace */
+
+        checkout scm
     }
 
-    stage('Test Mkdocs' ) {
-                agent {
-                docker { image 'madhavikdm/myrepo-agora:$BUILD_NUMBER' }
-            }
-            steps {
-                sh 'mkdocs --version'
-            }
-        }
+    stage('Build image') {
+        /* This builds the actual image */
 
+        app = docker.build("madhavikdm/myrepo-agora")
+    }
 
-    stage('Deploy Image') {
-      steps{
-        script {
-          docker.withRegistry( '', registryCredential ) {
-            dockerImage.push()
-          }
+    stage('Test image') {
+        
+        app.inside {
+            echo "Tests passed"
         }
-      }
     }
-    stage('Remove Unused docker image') {
-      steps{
-        sh "docker rmi $registry:$BUILD_NUMBER"
-      }
+
+    stage('Push image') {
+        /* 
+			You would need to first register with DockerHub before you can push images to your account
+		*/
+        docker.withRegistry('https://hub.docker.com/repository/docker', 'Docker_credentailas') {
+            app.push("${env.BUILD_NUMBER}")
+            app.push("latest")
+            } 
+                echo "Trying to Push Docker Build to DockerHub"
     }
-  }
 }
