--- a/jenkinsFile
+++ b/jenkinsFile
@@ -24,7 +24,7 @@ node {
         /* 
 			You would need to first register with DockerHub before you can push images to your account
 		*/
-        docker.withRegistry('https://hub.docker.com/repository/docker', 'Docker_credentailas') {
+        docker.withRegistry('https://hub.docker.com/repository/docker/madhavikdm/myrepo-agora', 'Docker_credentailas') {
             app.push("${env.BUILD_NUMBER}")
             app.push("latest")
             } 
