--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "getintodevops-hellonode",
+    "name": "madhavikdm-docker_demo",
     "version": "1.0.0",
     "description": "A Hello World HTTP server",
     "main": "app.js",
