--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "node app.js"
     },
+     "dependencies": {
+    "express": "^4.16.1"
+  },
     "repository": {
       "type": "git",
       "url": "https://github.com/madhavikdm/docker_demo"
