--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
       "type": "git",
       "url": "https://github.com/madhavikdm/docker_demo"
     },
+    {
+    #!/bin/sh
+#.... Initialization steps
+echo Image built: $(cat /build-date.txt)
+#.... More initialization steps
+# run the command
+exec "$@"
+}
     "keywords": [
       "node",
       "docker",
       "Dockerfile"
     ]
-    
   }
